--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
+    "chart.js": "^3.8.2",
     "ionicons": "^5.0.0",
     "react": "^16.13.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^16.13.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
