--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@types/react-dom": "^16.9.4",
     "@types/react-router": "^5.1.4",
     "@types/react-router-dom": "^5.1.3",
-    "chart.js": "^3.8.2",
+    "chart.js": "^3.9.0",
+    "fusioncharts": "^3.19.0",
     "ionicons": "^5.0.0",
     "react": "^16.13.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^16.13.0",
+    "react-fusioncharts": "^4.0.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "typescript": "3.8.3"
