--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-fusioncharts": "^4.0.0",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "react-spinners": "^0.13.4",
     "typescript": "3.8.3"
   },
   "scripts": {
